<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/setting_header">

        <EditTextPreference
            app:key="tax_num"
            app:defaultValue=""
            app:title="@string/setting_tax"
            app:useSimpleSummaryProvider="false" />

        <EditTextPreference
            app:key="company"
            app:title="@string/setting_company"
            app:useSimpleSummaryProvider="false" />


        <PreferenceScreen
            app:key="version"
            app:title="@string/setting_version"
            app:allowDividerAbove="true">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.qrcodegenerater"
                android:targetClass="com.example.qrcodegenerater.VersionActivity"/>
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>